refactor(assembly): 优化装配验证器和编译器代码结构
- 使用 switch 表达式重构端点引用验证逻辑
- 简化 ops 验证方法的参数传递
- 优化 facade grid 和 surface bands 的配置处理
- 更新集合访问方法使用 getFirst() 替代 get(0)
- 移除不必要的空检查条件
- 标准化文档注释格式使用 <p> 标签